http api doc complete
